[package]
name = "crabtap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
id3 = "1.13.1"
metaflac = "0.2.5"
termion = "3.0.0"
