[package]
name = "crabtap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
id3 = "1.13.1"
metaflac = "0.2.5"
ratatui = "0.26.1"
rodio = "0.17.3"

[[bin]]
name = "crabtap"
path = "src/main.rs"

[[bin]]
name = "crabtapfilter"
path = "src/filter.rs"
